--- a/language/de-DE.mod_articles_head.ini
+++ b/language/de-DE.mod_articles_head.ini
@@ -1,5 +1,24 @@
+
+; Modul-Weiterlesen im Frontend
+MOD_ARTICLES_HEAD_MODULEREADMORE_LABEL_FRONT="Weiterlesen..."
+
+; Beschriftung Video-Play-Button im Frontend
+MOD_ARTICLES_HEAD_FRONT_PLAYVIDEO="Film abspielen"
+
+; AJAX-Linkbeschriftung im Frontend
+MOD_ARTICLES_HEAD_AJAXLOADMORE_LABEL="Mehr laden..."
+
+
+
+
+; BACKEND
+
 MOD_ARTICLES_HEAD="HEAD. Beiträge-Modul"
-MOD_ARTICLES_HEAD_XML_DESCRIPTION="Von Carsten mit Liebe."
+MOD_ARTICLES_HEAD_XML_DESCRIPTION="Zeigt eine Auswahl von Beiträgen."
+
+MOD_ARTICLES_HEAD_FIELD_LOAD_MODULE_CSS_LABEL="Demo-Stylesheet"
+MOD_ARTICLES_HEAD_FIELD_LOAD_MODULE_CSS_DESC="Mit dieser Einstellung kann das Demo-Stylesheet ein- und ausgeschaltet werden."
+MOD_ARTICLES_HEAD_NOTE_MODULE_CSS_DESC="Das Stylesheet findest du unter: /media/mod_articles_head/css/mod-intro.css"
 
 MOD_ARTICLES_HEAD_FIELD_SHOW_MODULEINTRO_LABEL="Einleitungstext zeigen"
 MOD_ARTICLES_HEAD_FIELD_SHOW_MODULEINTRO_DESC="Mit dieser Einstellung wird die Anzeige des Einleitungstextes ein- und ausgeschaltet."
@@ -33,9 +52,6 @@ MOD_ARTICLES_HEAD_FIELD_LINKTOCATEGORY_DESC="Einen Link anzeigen, der zur ersten
 
 MOD_ARTICLES_HEAD_FIELD_MODULEREADMORE_LABEL="Weiterlesen Beschriftung"
 MOD_ARTICLES_HEAD_FIELD_MODULEREADMORE_DESC="Optionale Beschrifung für den Link zur Kategorie oder zum Menüeintrag."
-; Modul-Weiterlesen im Frontend
-MOD_ARTICLES_HEAD_MODULEREADMORE_LABEL_FRONT="Weiterlesen..."
-
 
 MOD_ARTICLES_HEAD_FIELD_MODULE_READMORE_POSITION_LABEL="Weiterlesen Position"
 MOD_ARTICLES_HEAD_FIELD_MODULE_READMORE_POSITION_DESC="Die Position des Link. Die Einstellung „Oben” wird unterhalb des Einleitungstexts und vor den Beiträgen angezeigt. Die Einstellung „Unten” wird unter den Beiträgen angezeigt."
@@ -48,6 +64,12 @@ MOD_ARTICLES_HEAD_FIELD_NOTE_ARTICLES_DESC="Einstellungen für Beiträge die vom
 
 MOD_ARTICLES_HEAD_FIELD_IMAGEINTRO_LABEL="Einleitungsbild anzeigen"
 MOD_ARTICLES_HEAD_FIELD_IMAGEINTRO_DESC="Hier kann eingestellt werden ob das Einleitungsbild von Beiträgen angezeigt werden soll."
+
+MOD_ARTICLES_HEAD_FIELD_INTROVIDEOS_LABEL="Vorschauvideos"
+MOD_ARTICLES_HEAD_FIELD_INTROVIDEOS_DESC="Hier kann eingestellt werden ob Vorschauvideos (X-Fields) angezeigt werden sollen."
+
+MOD_ARTICLES_HEAD_FIELD_FEATHERLIGHTBOX_LABEL="Featherlight.js"
+MOD_ARTICLES_HEAD_FIELD_FEATHERLIGHTBOX_DESC="Sollen das Featherlight-Script und das Stylesheet vom Modul eingefügt werden? Featherlight.js wird benötigt um die Vollversion des Videos abzuspielen. Auch wenn mehrere Instantzen dieses Moduls auf einer Seite vorhanden sind, wird Featherlight nur einmal geladen!"
 
 MOD_ARTICLES_HEAD_FIELD_IMAGES_LABEL="Bilder im Text anzeigen"
 MOD_ARTICLES_HEAD_FIELD_IMAGES_DESC="Hier kann eingestellt werden ob <strong>Bilder im Beitragstext</strong> angezeigt werden sollen."
@@ -89,8 +111,5 @@ MOD_ARTICLES_HEAD_FIELD_AJAX_LOADMORE_DESC="Ein Link zum laden weiterer Beiträg
 
 MOD_ARTICLES_HEAD_FIELD_AJAX_LOADMORE_LINK_LABEL="Linkbeschriftung"
 MOD_ARTICLES_HEAD_FIELD_AJAX_LOADMORE_LINK_DESC="Die optionale Beschriftung für den „Mehr Laden”-Link im Frontend."
-; AJAX-Linkbeschriftung im Frontend
-MOD_ARTICLES_HEAD_AJAXLOADMORE_LABEL="Mehr laden..."
-
 
 MOD_ARTICLES_HEAD_MODULEINTRO_DESC="Einleitungstext"
