--- a/mod_articles_head/language/de-DE.mod_articles_head.ini
+++ b/mod_articles_head/language/de-DE.mod_articles_head.ini
@@ -112,4 +112,16 @@ MOD_ARTICLES_HEAD_FIELD_AJAX_LOADMORE_DESC="Ein Link zum laden weiterer Beiträg
 MOD_ARTICLES_HEAD_FIELD_AJAX_LOADMORE_LINK_LABEL="Linkbeschriftung"
 MOD_ARTICLES_HEAD_FIELD_AJAX_LOADMORE_LINK_DESC="Die optionale Beschriftung für den „Mehr Laden”-Link im Frontend."
 
-MOD_ARTICLES_HEAD_MODULEINTRO_DESC="Einleitungstext"
+MOD_ARTICLES_HEAD_FIELD_AJAX_POST_ANIMATIONS_LABEL="Animationen verwenden"
+MOD_ARTICLES_HEAD_FIELD_AJAX_POST_ANIMATIONS_DESC="Sollen neu geladene Beiträge mit einer Animation eingeblendet werden?"
+
+MOD_ARTICLES_HEAD_FIELD_AJAX_POST_ANIMATIONS_LOAD_ANIMATEDCSS_LABEL="Animate.css laden"
+MOD_ARTICLES_HEAD_FIELD_AJAX_POST_ANIMATIONS_LOAD_ANIMATEDCSS_DESC="Soll das Stylesheet der CSS-Bibliothek Animate.css geladen werden?"
+
+MOD_ARTICLES_HEAD_FIELD_AJAX_POST_ANIMATION_CLASS_LABEL="Animationsklasse"
+MOD_ARTICLES_HEAD_FIELD_AJAX_POST_ANIMATION_CLASS_DESC="Die Basisklasse für Animationen je nach Bibliothek."
+
+MOD_ARTICLES_HEAD_FIELD_AJAX_POST_ANIMATION_NAME_LABEL="Animationsname"
+MOD_ARTICLES_HEAD_FIELD_AJAX_POST_ANIMATION_NAME_DESC="Der Name der Einblendeanimation."
+
+MOD_ARTICLES_HEAD_FIELD_NOTE_AJAX_POST_ANIMATION_NAMES_DESC="Für weitere Informationen zu Animationsnamen siehe die <a href=\"https://daneden.github.io/animate.css/?utm_campaign=content-curation&utm_medium=website&utm_source=angular-js.in\" target=\"_blank\">Website von Animate.css</a>"
