--- a/mod_articles_head/language/de-DE.mod_articles_head.ini
+++ b/mod_articles_head/language/de-DE.mod_articles_head.ini
@@ -1,18 +1,19 @@
 
 ; Modul-Weiterlesen im Frontend
-MOD_ARTICLES_HEAD_MODULEREADMORE_LABEL_FRONT="Weiterlesen..."
+MOD_ARTICLES_HEAD_MODULEREADMORE_LABEL_FRONT="Alle Themen"
 
 ; Beschriftung Video-Play-Button im Frontend
 MOD_ARTICLES_HEAD_FRONT_PLAYVIDEO="Film abspielen"
 
 ; AJAX-Linkbeschriftung im Frontend
-MOD_ARTICLES_HEAD_AJAXLOADMORE_LABEL="Mehr laden..."
+MOD_ARTICLES_HEAD_AJAXLOADMORE_LABEL="Mehr laden"
 
 
 
 
 ; BACKEND
 
+; params
 MOD_ARTICLES_HEAD="HEAD. Beiträge-Modul"
 MOD_ARTICLES_HEAD_XML_DESCRIPTION="Zeigt eine Auswahl von Beiträgen."
 
@@ -125,3 +126,17 @@ MOD_ARTICLES_HEAD_FIELD_AJAX_POST_ANIMATION_NAME_LABEL="Animationsname"
 MOD_ARTICLES_HEAD_FIELD_AJAX_POST_ANIMATION_NAME_DESC="Der Name der Einblendeanimation."
 
 MOD_ARTICLES_HEAD_FIELD_NOTE_AJAX_POST_ANIMATION_NAMES_DESC="Für weitere Informationen zu Animationsnamen siehe die <a href=\"https://daneden.github.io/animate.css/?utm_campaign=content-curation&utm_medium=website&utm_source=angular-js.in\" target=\"_blank\">Website von Animate.css</a>"
+
+
+; advanced
+MOD_ARTICLES_HEAD_FIELD_CLASSNAMES_ROWS_LABEL="Zeilen Klassensuffix"
+MOD_ARTICLES_HEAD_FIELD_CLASSNAMES_ROWS_DESC="CSS Klassensuffix für Zeilen. Eine Zeile enhält Spalten, welche einen Beitrag enthalten."
+MOD_ARTICLES_HEAD_FIELD_CLASSNAMES_ROWS_HINT="z.B.: row"
+
+MOD_ARTICLES_HEAD_FIELD_CLASSNAMES_COLS_LABEL="Spalten Klassensuffix"
+MOD_ARTICLES_HEAD_FIELD_CLASSNAMES_COLS_DESC="CSS Klassensuffix für Spalten. Eine Spalte enthält einen Beitrag."
+MOD_ARTICLES_HEAD_FIELD_CLASSNAMES_COLS_HINT="z.B.: col-md-4 col-lg-6"
+
+MOD_ARTICLES_HEAD_FIELD_CLASSNAMES_ITEMS_LABEL="Beiträge Klassensuffix"
+MOD_ARTICLES_HEAD_FIELD_CLASSNAMES_ITEMS_DESC="CSS Klassensuffix für Beiträge."
+MOD_ARTICLES_HEAD_FIELD_CLASSNAMES_ITEMS_HINT="z.B.: my-cool-articles"
