--- a/mod_articles_head/xfields/language/de-DE/de-DE.com_content.mod_intro.ini
+++ b/mod_articles_head/xfields/language/de-DE/de-DE.com_content.mod_intro.ini
@@ -2,3 +2,34 @@
 ; Wird von plg_content_xfields geladen
 
 COM_CONTENT_MOD_ARTICLES_HEAD_FIELDSET_LABEL="XF: HEAD. Beiträge-Modul"
+
+MOD_ARTICLES_HEAD_XFIELDS_VIDEOS_NOTE_LABEL="Videos"
+MOD_ARTICLES_HEAD_XFIELDS_VIDEOS_NOTE_DESC=""
+
+MOD_ARTICLES_HEAD_XFIELDS_TEASER_VIDEO_LABEL="Vorschauvideo"
+MOD_ARTICLES_HEAD_XFIELDS_TEASER_VIDEO_DESC="Das Vorschauvideo wird angezeigt, wenn mit dem Mauszeiger auf den Beitrag gezeigt wird."
+
+MOD_ARTICLES_HEAD_XFIELDS_FULL_VIDEO_LABEL="Ganzer Film"
+MOD_ARTICLES_HEAD_XFIELDS_FULL_VIDEO_DESC="Wenn dieses Feld ausgefüllt wird, wird ein Abspielen-Knopf über dem Vorschauvideo, dem Beitragsbild oder Protoslider angezeigt, und der gewählte Film wird in einer Lightbox abgespielt."
+
+MOD_ARTICLES_HEAD_XFIELDS_NOTE_READMORE_OVERRIDE_LABEL="Weiterlesen Override"
+MOD_ARTICLES_HEAD_XFIELDS_NOTE_READMORE_OVERRIDE_DESC=""
+
+MOD_ARTICLES_HEAD_XFIELDS_READMORE_OVERRIDE_LABEL="Ziel"
+MOD_ARTICLES_HEAD_XFIELDS_READMORE_OVERRIDE_DESC="Wähle den Typ (das Ziel) des Link-Override."
+MOD_ARTICLES_HEAD_XFIELDS_READMORE_OVERRIDE_OPT_MENUITEM="Menüeintrag"
+MOD_ARTICLES_HEAD_XFIELDS_READMORE_OVERRIDE_OPT_ARTICLE="Beitrag"
+MOD_ARTICLES_HEAD_XFIELDS_READMORE_OVERRIDE_OPT_URL="URL"
+
+MOD_ARTICLES_HEAD_XFIELDS_READMORE_OVERRIDE_MENUITEM_LABEL="Menüeintrag"
+MOD_ARTICLES_HEAD_XFIELDS_READMORE_OVERRIDE_MENUITEM_DESC="Wähle den Ziel-Menüeintrag."
+
+MOD_ARTICLES_HEAD_XFIELDS_READMORE_OVERRIDE_ARTICLE_LABEL="Beitrag"
+MOD_ARTICLES_HEAD_XFIELDS_READMORE_OVERRIDE_ARTICLE_DESC="Wähle den Ziel-Beitrag."
+
+MOD_ARTICLES_HEAD_XFIELDS_READMORE_OVERRIDE_URL_LABEL="URL"
+MOD_ARTICLES_HEAD_XFIELDS_READMORE_OVERRIDE_URL_DESC="Gib die Ziel-URL ein."
+MOD_ARTICLES_HEAD_XFIELDS_READMORE_OVERRIDE_URL_HINT="https://www.headmarketing.de"
+
+MOD_ARTICLES_HEAD_XFIELDS_READMORE_OVERRIDE_TARGETBLANK_LABEL="Neues Fenster"
+MOD_ARTICLES_HEAD_XFIELDS_READMORE_OVERRIDE_TARGETBLANK_DESC="Fügt dem Hyperlink das Attribut target mit dem Wert _blank hinzu."
