Ergänzung Optionen für Info-Block

--- a/mod_articles_head/language/de-DE.mod_articles_head.ini
+++ b/mod_articles_head/language/de-DE.mod_articles_head.ini
@@ -91,6 +91,37 @@ MOD_ARTICLES_HEAD_FIELD_TRIGGER_EVENTS_LABEL="Content Events"
 MOD_ARTICLES_HEAD_FIELD_TRIGGER_EVENTS_DESC="Joomla! Content Events in den Beiträgen auslösen. <strong>Wenn z.B. „Eigene Felder” (com_fields) benötigt werden muss diese Option eingeschaltet werden.</strong>"
 MOD_ARTICLES_HEAD_FIELD_NOTE_CONTENT_EVENTS_DESC="Das auslösen der Content Events rendert auch andere Content-Plugins (z.B. Galerien etc.). Dies kann erwünschte und unerwünschte Effekte haben."
 
+MOD_ARTICLES_HEAD_FIELD_SHOW_INFOBLOCK_LABEL="Beitragsinfo anzeigen"
+MOD_ARTICLES_HEAD_FIELD_SHOW_INFOBLOCK_DESC=""
+
+MOD_ARTICLES_HEAD_FIELD_SHOW_INFO_CREATEDATE_LABEL="Beitragsinfo Titel anzeigen"
+MOD_ARTICLES_HEAD_FIELD_SHOW_INFO_CREATEDATE_DESC="Zeigt den Titel (Details) des Info-Blocks."
+
+MOD_ARTICLES_HEAD_FIELD_SHOW_AUTHOR_LABEL="Autor anzeigen"
+MOD_ARTICLES_HEAD_FIELD_SHOW_AUTHOR_DESC="Zeige den Autor der Beiträge."
+
+MOD_ARTICLES_HEAD_FIELD_SHOW_CATEGORY_LABEL="Kategorie anzeigen"
+MOD_ARTICLES_HEAD_FIELD_SHOW_CATEGORY_DESC="Zeige die Kategorie denen die Beiträge angehören."
+
+MOD_ARTICLES_HEAD_FIELD_SHOW_PARENT_CATEGORY_LABEL="Elternkategorie anzeigen"
+MOD_ARTICLES_HEAD_FIELD_SHOW_PARENT_CATEGORY_DESC="Zeige die Elternkategorie denen die Beiträge angehören."
+
+MOD_ARTICLES_HEAD_FIELD_SHOW_ASSOCIATIONS_LABEL="Sprachverknüpfungen anzeigen"
+MOD_ARTICLES_HEAD_FIELD_SHOW_ASSOCIATIONS_DESC="Zeige verknüpfte Artikel in weiteren Sprachen."
+
+MOD_ARTICLES_HEAD_FIELD_SHOW_PUBLISH_DATE_LABEL="Veröffentlichungsdatum anzeigen"
+MOD_ARTICLES_HEAD_FIELD_SHOW_PUBLISH_DATE_DESC="Zeige das Veröffentlichungsdatum der Beiträge."
+
+MOD_ARTICLES_HEAD_FIELD_SHOW_CREATE_DATE_LABEL="Erstellungsdatum anzeigen"
+MOD_ARTICLES_HEAD_FIELD_SHOW_CREATE_DATE_DESC="Zeige das Erstellungsdatum der Beiträge"
+
+MOD_ARTICLES_HEAD_FIELD_SHOW_MODIFY_DATE_LABEL="Änderungsdatum anzeigen"
+MOD_ARTICLES_HEAD_FIELD_SHOW_MODIFY_DATE_DESC="Zeige das Änderungsdatum der Beiträge."
+
+MOD_ARTICLES_HEAD_FIELD_SHOW_HITS_LABEL="Zeige Hits"
+MOD_ARTICLES_HEAD_FIELD_SHOW_HITS_DESC="Zeige wie oft die Beiträge aufgerufen wurden."
+
+
 MOD_ARTICLES_HEAD_FIELD_NOTE_ORDERING_LABEL="Sortierung"
 MOD_ARTICLES_HEAD_FIELD_NOTE_ORDERING_DESC="Mit diesen Einstellungen wird die Sortierung der Beiträge im Modul bestimmt."
 
