--- a/mod_articles_head/language/de-DE.mod_articles_head.ini
+++ b/mod_articles_head/language/de-DE.mod_articles_head.ini
@@ -8,6 +8,8 @@ MOD_ARTICLES_HEAD_FRONT_PLAYVIDEO="Film abspielen"
 ; AJAX-Linkbeschriftung im Frontend
 MOD_ARTICLES_HEAD_AJAXLOADMORE_LABEL="Mehr laden"
 
+; Filter
+MOD_ARTICLES_HEAD_FRONT_FILTER_SHOWALL="Alle"
 
 
 
@@ -135,14 +137,65 @@ MOD_ARTICLES_HEAD_FIELD_ORDERING_OPT_PUBLISHED_DATE="Veröffentlichungsdatum"
 MOD_ARTICLES_HEAD_FIELD_ORDERING_OPT_ORDERING="Sortierung"
 MOD_ARTICLES_HEAD_FIELD_ORDERING_OPT_RANDOM="Zufällig"
 
-MOD_ARTICLES_HEAD_FIELD_NOTE_AJAX_INTERFACE_LABEL="AJAX Interface"
-MOD_ARTICLES_HEAD_FIELD_NOTE_AJAX_INTERFACE_DESC="Ermöglicht das asynchrone laden weiterer Beiträge."
 
-MOD_ARTICLES_HEAD_FIELD_AJAX_LOADMORE_LABEL="AJAX Interface"
-MOD_ARTICLES_HEAD_FIELD_AJAX_LOADMORE_DESC="Ein Link zum laden weiterer Beiträge wird angezeigt. Die Anzahl wird in der Option „Anzahl von Beträgen” unter „Sortierung” bestimmt."
 
-MOD_ARTICLES_HEAD_FIELD_AJAX_LOADMORE_LINK_LABEL="Linkbeschriftung"
+; AJAX und Filter
+COM_MODULES_MOD_INTRO_AJAX_FIELDSET_LABEL="AJAX und Filter"
+
+MOD_ARTICLES_HEAD_FIELD_NOTE_AJAX_INTERFACE_LABEL="AJAX Einschalten"
+MOD_ARTICLES_HEAD_FIELD_NOTE_AJAX_INTERFACE_DESC="Ermöglicht das asynchrone laden von Beiträgen oder das asynchrone Blättern zwischen mehreren Seiten."
+
+MOD_ARTICLES_HEAD_FIELD_AJAX_ENABLE_LABEL="AJAX Interface"
+MOD_ARTICLES_HEAD_FIELD_AJAX_ENABLE_DESC="Aktiviere oder deaktiviere das AJAX Interface."
+
+MOD_ARTICLES_HEAD_FIELD_AJAX_LOADMORE_TYPE_LABEL="Art der Steuerung"
+MOD_ARTICLES_HEAD_FIELD_AJAX_LOADMORE_TYPE_DESC="Du kannst entscheiden zwischen einem Button, der das Laden einer festen Anzahl von Beiträgen auslöst, und diese an die Liste anhängt. Oder einer Paginierung, welche die angezeigten Beiträge ersetzt."
+MOD_ARTICLES_HEAD_FIELD_AJAX_LOADMORE_TYPE_OPT_LOADMORE="Ein Button"
+MOD_ARTICLES_HEAD_FIELD_AJAX_LOADMORE_TYPE_OPT_PAGINATION="Paginierung"
+
+MOD_ARTICLES_HEAD_FIELD_AJAX_LOADMORE_LINK_LABEL="Buttonbeschriftung"
 MOD_ARTICLES_HEAD_FIELD_AJAX_LOADMORE_LINK_DESC="Die optionale Beschriftung für den „Mehr Laden”-Link im Frontend."
+
+; Filter
+MOD_ARTICLES_HEAD_FIELD_NOTE_AJAX_FILTERS_LABEL="AJAX Filter"
+MOD_ARTICLES_HEAD_FIELD_NOTE_AJAX_FILTERS_DESC="Ermöglicht das Filtern von Beiträgen im Frontend."
+
+MOD_ARTICLES_HEAD_FIELD_AJAX_FILTERS_LABEL="Filter anzeigen"
+MOD_ARTICLES_HEAD_FIELD_AJAX_FILTERS_DESC="Zeigt weitere Optionen zu möglichen Beitragsfiltern die das AJAX Interface benutzen."
+
+MOD_ARTICLES_HEAD_FIELD_AJAX_FILTER_LABEL="Filterkonfiguration"
+MOD_ARTICLES_HEAD_FIELD_AJAX_FILTER_DESC="Wähle und konfiguriere die Filter"
+
+MOD_ARTICLES_HEAD_FIELD_FILTER_TYPE_LABEL="Filtertyp"
+MOD_ARTICLES_HEAD_FIELD_FILTER_TYPE_DESC=""
+MOD_ARTICLES_HEAD_FIELD_FILTER_TYPE_OPT_CATEGORY="Kategorien"
+MOD_ARTICLES_HEAD_FIELD_FILTER_TYPE_OPT_TAG="Schlagworte"
+MOD_ARTICLES_HEAD_FIELD_FILTER_TYPE_OPT_CUSTOM="Eigene Felder"
+
+MOD_ARTICLES_HEAD_FIELD_FILTER_LABEL_LABEL="Filterbeschriftung"
+MOD_ARTICLES_HEAD_FIELD_FILTER_LABEL_DESC="Eine Optionale Beschriftung für den Filter im Frontend."
+
+MOD_ARTICLES_HEAD_FIELD_FILTER_SORTING_LABEL="Optionen sortieren"
+MOD_ARTICLES_HEAD_FIELD_FILTER_SORTING_DESC="Wie sollen die Optionen dieses Filters im Frontend sortiert werden?"
+MOD_ARTICLES_HEAD_FIELD_FILTER_SORTING_OPT_ASC="Aufsteigend"
+MOD_ARTICLES_HEAD_FIELD_FILTER_SORTING_OPT_DESC="Absteigend"
+
+MOD_ARTICLES_HEAD_FIELD_FILTER_MULTIPLE_LABEL="Mehrfachauswahl"
+MOD_ARTICLES_HEAD_FIELD_FILTER_MULTIPLE_DESC="Es können mehrere Optionen dieses Filters im Frontend ausgewählt und angewendet werden."
+
+MOD_ARTICLES_HEAD_FIELD_FILTER_SHOW_ITEMS_COUNT_LABEL="Anzahl Beiträge pro Option"
+MOD_ARTICLES_HEAD_FIELD_FILTER_SHOW_ITEMS_COUNT_DESC="Zeigt die Anzahl der Beiträge, die auf eine Option dieses Filters zutreffen."
+
+MOD_ARTICLES_HEAD_FIELD_FILTER_TEMPLATE_LABEL="Filter Template"
+MOD_ARTICLES_HEAD_FIELD_FILTER_TEMPLATE_DESC="Wähle das Template, das zum rendern dieses Filters angewendet werden soll."
+
+MOD_ARTICLES_HEAD_FRONT_BTN_SUBMIT_FILTERS="Filter anwenden"
+MOD_ARTICLES_HEAD_FRONT_BTN_RESET_FILTERS="Filter zurücksetzen"
+
+
+; Animationen
+MOD_ARTICLES_HEAD_FIELD_NOTE_AJAX_POST_ANIMATIONS_LABEL="Animationen"
+MOD_ARTICLES_HEAD_FIELD_NOTE_AJAX_POST_ANIMATIONS_DESC="Einstellungen für Einblendeanimationen."
 
 MOD_ARTICLES_HEAD_FIELD_AJAX_POST_ANIMATIONS_LABEL="Animationen verwenden"
 MOD_ARTICLES_HEAD_FIELD_AJAX_POST_ANIMATIONS_DESC="Sollen neu geladene Beiträge mit einer Animation eingeblendet werden?"
@@ -171,3 +224,10 @@ MOD_ARTICLES_HEAD_FIELD_CLASSNAMES_COLS_HINT="z.B.: col-md-4 col-lg-6"
 MOD_ARTICLES_HEAD_FIELD_CLASSNAMES_ITEMS_LABEL="Beiträge Klassensuffix"
 MOD_ARTICLES_HEAD_FIELD_CLASSNAMES_ITEMS_DESC="CSS Klassensuffix für Beiträge."
 MOD_ARTICLES_HEAD_FIELD_CLASSNAMES_ITEMS_HINT="z.B.: my-cool-articles"
+
+
+; Pagination
+MOD_ARTICLES_HEAD_PAGINATION_START_LABEL="Start"
+MOD_ARTICLES_HEAD_PAGINATION_PREVIOUS_LABEL="Zurück"
+MOD_ARTICLES_HEAD_PAGINATION_NEXT_LABEL="Vorwärts"
+MOD_ARTICLES_HEAD_PAGINATION_END_LABEL="Ende"
