Pagination Layout designer

--- a/mod_articles_head/language/de-DE.mod_articles_head.ini
+++ b/mod_articles_head/language/de-DE.mod_articles_head.ini
@@ -227,6 +227,11 @@ MOD_ARTICLES_HEAD_FIELD_CLASSNAMES_ITEMS_HINT="z.B.: my-cool-articles"
 
 
 ; Pagination
+MOD_ARTICLES_HEAD_FIELD_AJAX_PAGINATION_LAYOUT_LABEL="Paginierung Layout"
+MOD_ARTICLES_HEAD_FIELD_AJAX_PAGINATION_LAYOUT_DESC="Hier kannst du die einstellen, wie die Paginierung dargestellt werden soll."
+
+
+MOD_ARTICLES_HEAD_PAGINATION_PAGES_LABEL="Seitenzahlen" ; Nur Backend.
 MOD_ARTICLES_HEAD_PAGINATION_START_LABEL="Start"
 MOD_ARTICLES_HEAD_PAGINATION_PREVIOUS_LABEL="Zurück"
 MOD_ARTICLES_HEAD_PAGINATION_NEXT_LABEL="Vorwärts"
