--- a/mod_articles_head/language/de-DE.mod_articles_head.ini
+++ b/mod_articles_head/language/de-DE.mod_articles_head.ini
@@ -156,6 +156,13 @@ MOD_ARTICLES_HEAD_FIELD_AJAX_LOADMORE_TYPE_OPT_PAGINATION="Paginierung"
 MOD_ARTICLES_HEAD_FIELD_AJAX_LOADMORE_LINK_LABEL="Buttonbeschriftung"
 MOD_ARTICLES_HEAD_FIELD_AJAX_LOADMORE_LINK_DESC="Die optionale Beschriftung für den „Mehr Laden”-Link im Frontend."
 
+MOD_ARTICLES_HEAD_FIELD_AJAX_SCROLL_LABEL="Scrollen"
+MOD_ARTICLES_HEAD_FIELD_AJAX_SCROLL_DESC="Scrolle nach dem Laden neuer Items an deren Oberkante."
+
+MOD_ARTICLES_HEAD_FIELD_AJAX_SCROLL_OFFSET_QUERY_LABEL="Offset Element"
+MOD_ARTICLES_HEAD_FIELD_AJAX_SCROLL_OFFSET_QUERY_DESC="Ein gültiger CSS Selektor eines Elements, dessen Höhe beim Scrollen subtrahiert wird."
+MOD_ARTICLES_HEAD_FIELD_AJAX_SCROLL_OFFSET_QUERY_HINT="z.B.: #site-header"
+
 ; Filter
 MOD_ARTICLES_HEAD_FIELD_NOTE_AJAX_FILTERS_LABEL="AJAX Filter"
 MOD_ARTICLES_HEAD_FIELD_NOTE_AJAX_FILTERS_DESC="Ermöglicht das Filtern von Beiträgen im Frontend."
