--- a/mod_articles_head/language/de-DE.mod_articles_head.sys.ini
+++ b/mod_articles_head/language/de-DE.mod_articles_head.sys.ini
@@ -1,2 +1,2 @@
 MOD_ARTICLES_HEAD="HEAD. Beiträge-Modul"
-MOD_ARTICLES_HEAD_XML_DESCRIPTION="Zeigt eine Auswahl an Beiträgen"
+MOD_ARTICLES_HEAD_XML_DESCRIPTION="Zeigt eine Auswahl an Beiträgen."
