--- a/mod_articles_head/language/de-DE.mod_articles_head.ini
+++ b/mod_articles_head/language/de-DE.mod_articles_head.ini
@@ -153,6 +153,9 @@ MOD_ARTICLES_HEAD_FIELD_AJAX_LOADMORE_TYPE_DESC="Du kannst entscheiden zwischen 
 MOD_ARTICLES_HEAD_FIELD_AJAX_LOADMORE_TYPE_OPT_LOADMORE="Ein Button"
 MOD_ARTICLES_HEAD_FIELD_AJAX_LOADMORE_TYPE_OPT_PAGINATION="Paginierung"
 
+MOD_ARTICLES_HEAD_FIELD_AJAX_PAGINATION_LABELS_LABEL="Beschriftung anzeigen"
+MOD_ARTICLES_HEAD_FIELD_AJAX_PAGINATION_LABELS_DESC="Zeige die Beschriftungen der Buttons Vor, Zurück etc."
+
 MOD_ARTICLES_HEAD_FIELD_AJAX_LOADMORE_LINK_LABEL="Buttonbeschriftung"
 MOD_ARTICLES_HEAD_FIELD_AJAX_LOADMORE_LINK_DESC="Die optionale Beschriftung für den „Mehr Laden”-Link im Frontend."
 
