--- a/mod_articles_head/language/de-DE.mod_articles_head.ini
+++ b/mod_articles_head/language/de-DE.mod_articles_head.ini
@@ -163,8 +163,11 @@ MOD_ARTICLES_HEAD_FIELD_AJAX_SCROLL_LABEL="Scrollen"
 MOD_ARTICLES_HEAD_FIELD_AJAX_SCROLL_DESC="Scrolle nach dem Laden neuer Items an deren Oberkante."
 
 MOD_ARTICLES_HEAD_FIELD_AJAX_SCROLL_OFFSET_QUERY_LABEL="Offset Element"
-MOD_ARTICLES_HEAD_FIELD_AJAX_SCROLL_OFFSET_QUERY_DESC="Ein gültiger CSS Selektor eines Elements, dessen Höhe beim Scrollen subtrahiert wird."
+MOD_ARTICLES_HEAD_FIELD_AJAX_SCROLL_OFFSET_QUERY_DESC="Ein gültiger CSS Selektor eines Elements, dessen Höhe (in Pixel) beim Scrollen abgezogen wird."
 MOD_ARTICLES_HEAD_FIELD_AJAX_SCROLL_OFFSET_QUERY_HINT="z.B.: #site-header"
+
+MOD_ARTICLES_HEAD_FIELD_AJAX_SCROLL_OFFSET_MANUAL_LABEL="Manueller Offset"
+MOD_ARTICLES_HEAD_FIELD_AJAX_SCROLL_OFFSET_MANUAL_DESC="Ein Integer-Wert (Pixel) der beim Scrollen abgezogen wird."
 
 ; Filter
 MOD_ARTICLES_HEAD_FIELD_NOTE_AJAX_FILTERS_LABEL="AJAX Filter"
