--- a/mod_articles_head/language/de-DE.mod_articles_head.ini
+++ b/mod_articles_head/language/de-DE.mod_articles_head.ini
@@ -153,8 +153,15 @@ MOD_ARTICLES_HEAD_FIELD_AJAX_LOADMORE_TYPE_DESC="Du kannst entscheiden zwischen 
 MOD_ARTICLES_HEAD_FIELD_AJAX_LOADMORE_TYPE_OPT_LOADMORE="Ein Button"
 MOD_ARTICLES_HEAD_FIELD_AJAX_LOADMORE_TYPE_OPT_PAGINATION="Paginierung"
 
+MOD_ARTICLES_HEAD_FIELD_AJAX_PAGINATION_RANGE_LABEL="Reichweite"
+MOD_ARTICLES_HEAD_FIELD_AJAX_PAGINATION_RANGE_DESC="Zeige diese Anzahl an Seiten in der Paginierung."
+MOD_ARTICLES_HEAD_RANGELINK_LABEL="..."
+
 MOD_ARTICLES_HEAD_FIELD_AJAX_PAGINATION_LABELS_LABEL="Beschriftung anzeigen"
 MOD_ARTICLES_HEAD_FIELD_AJAX_PAGINATION_LABELS_DESC="Zeige die Beschriftungen der Buttons Vor, Zurück etc."
+
+MOD_ARTICLES_HEAD_FIELD_AJAX_PAGINATION_PAGECOUNTER_LABEL="Seitenzähler anzeigen"
+MOD_ARTICLES_HEAD_FIELD_AJAX_PAGINATION_PAGECOUNTER_DESC="Zeige den Seitenzähler (Seite x von y) an."
 
 MOD_ARTICLES_HEAD_FIELD_AJAX_LOADMORE_LINK_LABEL="Buttonbeschriftung"
 MOD_ARTICLES_HEAD_FIELD_AJAX_LOADMORE_LINK_DESC="Die optionale Beschriftung für den „Mehr Laden”-Link im Frontend."
