Loadmore Inhalt ersetzen

--- a/mod_articles_head/language/de-DE.mod_articles_head.ini
+++ b/mod_articles_head/language/de-DE.mod_articles_head.ini
@@ -157,6 +157,9 @@ MOD_ARTICLES_HEAD_FIELD_AJAX_PAGINATION_RANGE_LABEL="Reichweite"
 MOD_ARTICLES_HEAD_FIELD_AJAX_PAGINATION_RANGE_DESC="Zeige diese Anzahl an Seiten in der Paginierung."
 MOD_ARTICLES_HEAD_RANGELINK_LABEL="..."
 
+MOD_ARTICLES_HEAD_FIELD_AJAX_REPLACE_CONTENT_LABEL="Inhalt ersetzen"
+MOD_ARTICLES_HEAD_FIELD_AJAX_REPLACE_CONTENT_DESC="Beim betätigen des „Mehr laden”-Link wird der Inhalt im Modul ersetzt und nicht am Ende angehängt."
+
 MOD_ARTICLES_HEAD_FIELD_AJAX_PAGINATION_LABELS_LABEL="Beschriftung anzeigen"
 MOD_ARTICLES_HEAD_FIELD_AJAX_PAGINATION_LABELS_DESC="Zeige die Beschriftungen der Buttons Vor, Zurück etc."
 
