Fix Failsafe in JS init Scripts

--- a/mod_articles_head/language/de-DE.mod_articles_head.ini
+++ b/mod_articles_head/language/de-DE.mod_articles_head.ini
@@ -214,6 +214,9 @@ MODARH_FIELD_FILTER_TYPE_OPT_CATEGORY="Kategorien"
 MODARH_FIELD_FILTER_TYPE_OPT_TAG="Schlagworte"
 MODARH_FIELD_FILTER_TYPE_OPT_CUSTOM="Eigene Felder"
 
+MODARH_FIELD_FILTER_CATEGORY_DEFAULT_LABEL="Vorgabe-Kategorie"
+MODARH_FIELD_FILTER_CATEGORY_DEFAULT_DESC="Die voreingestellte Kategorie für den Kategoriefilter."
+
 MODARH_FIELD_FILTER_LABEL_LABEL="Filterbeschriftung"
 MODARH_FIELD_FILTER_LABEL_DESC="Eine Optionale Beschriftung für den Filter im Frontend."
 
