--- a/mod_articles_head/language/de-DE.mod_articles_head.ini
+++ b/mod_articles_head/language/de-DE.mod_articles_head.ini
@@ -3,7 +3,7 @@
 MODARH_MODULE_READMORE_LABEL_FRONT="Alle Themen"
 
 ; Beschriftung Video-Play-Button im Frontend
-MODARH_FRONT_PLAYVIDEO="Film abspielen"
+MODARH_FRONT_PLAYVIDEO="abspielen"
 
 ; AJAX-Linkbeschriftung im Frontend
 MODARH_AJAXLOADMORE_LABEL="Mehr laden"
@@ -11,37 +11,30 @@ MODARH_AJAXLOADMORE_LABEL="Mehr laden"
 ; Filter
 MODARH_FRONT_FILTER_SHOWALL="Alle"
 
-
-
-; BACKEND
+; Allgemein
+MODARH_OPT_ONLY="Nur"
 
 ; params
 MOD_ARTICLES_HEAD="HEAD. Beiträge-Modul"
 MODARH_XML_DESCRIPTION="Zeigt eine Auswahl von Beiträgen."
 
 MODARH_FIELD_LOAD_MODULE_CSS_LABEL="Demo-Stylesheet"
-MODARH_FIELD_LOAD_MODULE_CSS_DESC="Mit dieser Einstellung kann das Demo-Stylesheet ein- und ausgeschaltet werden."
+MODARH_FIELD_LOAD_MODULE_CSS_DESC="Ein Stylesheet zur Demonstration mit rudimentären Formatierungen."
 MODARH_NOTE_MODULE_CSS_DESC="Das Stylesheet findest du unter: /media/mod_articles_head/css/mod-intro.css"
 
 MODARH_FIELD_CATEGORY_DESC="Es werden nur Beiträge aus den gewählen Kategorien angezeigt. Wird keine Kategorie gewählt, werden Beiträge aus allen Kategorien angezeigt."
 MODARH_FIELD_TAG_DESC="Es werden nur Beiträge angezeigt, denen die gewählten Schlageworte zugewiesen sind."
 
 MODARH_FIELD_SHOW_FEATURED_ITEMS_LABEL="Haupteinträge"
-MODARH_FIELD_SHOW_FEATURED_ITEMS_DESC="Hier kann einstellt werden, wie mit Haupeinträgen umgegangen wird. Es können auch ausschließlcih Haupteinträge aus allen Kategorien angezeigt werden, indem keine Kategorie gewählt wird."
-MODARH_FIELD_SHOW_FEATURED_ITEMS_OPT_SHOW="Anzeigen"
-MODARH_FIELD_SHOW_FEATURED_ITEMS_OPT_HIDE="Verbergen"
-MODARH_FIELD_SHOW_FEATURED_ITEMS_OPT_ONLY="Ausschließlich"
+MODARH_FIELD_SHOW_FEATURED_ITEMS_DESC="Hier kann einstellt werden, wie mit Haupeinträgen umgegangen wird. Es können auch ausschließlich Haupteinträge aus allen Kategorien angezeigt werden, indem keine Kategorie gewählt wird."
 
-MODARH_FIELD_NOTE_FILTER_LABEL="Beiträge filtern"
+MODARH_FIELD_NOTE_FILTER_LABEL="Allgemeine Filtereinstellungen"
 MODARH_FIELD_NOTE_FILTER_DESC="Die Liste der Beiträge wird nach diesen Einstellungen gefiltert."
 
-MODARH_HIDECURRENTARTICLE="Aktuellen Artikel vebergen"
-MODARH_HIDECURRENTARTICLE_DESC="Wenn dieses Modul in einem Artikel angezeigt wird, der auch von diesem Modul angezeigt wird, kann der Artikel mit dieser Option im Modul verborgen werden."
-
+MODARH_HIDECURRENTARTICLE="Aktuellen Beitrag vebergen"
+MODARH_HIDECURRENTARTICLE_DESC="(Buggy) Befindet sich dieses Modul auf einem Beitrag der auch in diesem Modul angezeigt wird, kann mit dieser Option gewählt werden, dass der aktuell angezeigte Beitrag nicht im Modul erscheint. <strong>Verursacht Probleme mit AJAX und Filtern</strong>."
 
 MODARH_FIELD_NOTE_MODULE_READMORE_LABEL="Modul-Weiterlesen"
-
-
 MODARH_FIELD_MODULE_READMORE_TYPE_LABEL="Modul-Weiterlesen"
 MODARH_FIELD_MODULE_READMORE_TYPE_DESC="Einen Link anzeigen, der zum gewählten Menüeintrag oder zur ersten im Feld „Kategorie” ausgewählten Kategorie führt."
 MODARH_FIELD_MODULE_READMORE_TYPE_OPT_CATEGORY="Kategorie"
@@ -52,7 +45,7 @@ MODARH_FIELD_MODULE_READMORE_MENUITEM_LABEL="Menüeintrag"
 MODARH_FIELD_MODULE_READMORE_MENUITEM_DESC="Den Weiterlesen-Link mit dem gewählten Menüeintrag verknüpfen."
 
 MODARH_FIELD_MODULE_READMORE_URL_LABEL="URL"
-MODARH_FIELD_MODULE_READMORE_URL_HINT="http://"
+MODARH_FIELD_MODULE_READMORE_URL_HINT="https://"
 MODARH_FIELD_MODULE_READMORE_URL_DESC="Der URL für den Weiterlesen-Link."
 
 MODARH_FIELD_MODULE_READMORE_LABEL="Weiterlesen Beschriftung"
@@ -73,6 +66,7 @@ MODARH_FIELD_ORDERING_DESC="Die Reihenfolge der ausgewählten Beiträge auswähl
 MODARH_FIELD_ORDERING_OPT_CREATED_DATE="Erstellungsdatum"
 MODARH_FIELD_ORDERING_OPT_PUBLISHED_DATE="Veröffentlichungsdatum"
 MODARH_FIELD_ORDERING_OPT_ORDERING="Sortierung"
+MODARH_FIELD_ORDERING_OPT_TITLE="Beitragstitel"
 MODARH_FIELD_ORDERING_OPT_RANDOM="Zufällig"
 
 
@@ -83,45 +77,62 @@ MODARH_FIELD_SHOW_MODULEINTRO_LABEL="Einleitungstext zeigen"
 MODARH_FIELD_SHOW_MODULEINTRO_DESC="Mit dieser Einstellung wird die Anzeige des Einleitungstextes ein- und ausgeschaltet."
 
 MODARH_FIELD_MODULEINTRO_LABEL="Einleitungstext"
-MODARH_FIELD_MODULEINTRO_DESC="Der Einleitungstext wird über den Beiträgen angezeigt."
+MODARH_FIELD_MODULEINTRO_DESC="Der Einleitungstext wird über der Liste der Beiträge angezeigt."
 
 
 ; Beiträge Darstellung
 COM_MODULES_MOD_INTRO_ARTICLES_FIELDSET_LABEL="Beiträge"
 
 MODARH_FIELD_NOTE_ARTICLES_LABEL="Beiträge"
-MODARH_FIELD_NOTE_ARTICLES_DESC="Einstellungen für Beiträge die vom Modul angezeigt werden."
+MODARH_FIELD_NOTE_ARTICLES_DESC="Einstellungen für die Anzeige der einzelnen Beiträge."
 
 MODARH_FIELD_IMAGEINTRO_LABEL="Einleitungsbild anzeigen"
 MODARH_FIELD_IMAGEINTRO_DESC="Hier kann eingestellt werden ob das Einleitungsbild von Beiträgen angezeigt werden soll."
+
+MODARH_IMAGEINTRO_TYPE_LABEL="Einleitungsbild wählen"
+MODARH_IMAGEINTRO_TYPE_DESC="Wählen Sie welches Bild angezeigt werden soll."
+MODARH_IMAGEINTRO_TYPE_INTROIMAGE="Einleitungsbild"
+MODARH_IMAGEINTRO_TYPE_FULLIMAGE="Komplettes Beitragsbild"
+
 
 MODARH_FIELD_INTROVIDEOS_LABEL="Vorschauvideos"
 MODARH_FIELD_INTROVIDEOS_DESC="Hier kann eingestellt werden ob Vorschauvideos (X-Fields) angezeigt werden sollen."
 
 MODARH_FIELD_FEATHERLIGHTBOX_LABEL="Featherlight.js"
-MODARH_FIELD_FEATHERLIGHTBOX_DESC="Sollen das Featherlight-Script und das Stylesheet vom Modul eingefügt werden? Featherlight.js wird benötigt um die Vollversion des Videos abzuspielen. Auch wenn mehrere Instantzen dieses Moduls auf einer Seite vorhanden sind, wird Featherlight nur einmal geladen!"
+MODARH_FIELD_FEATHERLIGHTBOX_DESC="Sollen das Featherlight-Script und das Stylesheet vom Modul eingefügt werden? Featherlight.js wird benötigt um die Vollversion des Videos abzuspielen."
+
+MODARH_FIELD_INTROTEXT_LABEL="Einleitungstext anzeigen"
+MODARH_FIELD_INTROTEXT_DESC="Den Einleitungstext des Beitrags anzeigen."
+
+MODARH_FIELD_SHOW_TAGS_LABEL="Schlagworte anzeigen"
+MODARH_FIELD_SHOW_TAGS_DESC="Schlagworte anzeigen, die einem Beitrag zugewiesen sind."
 
 MODARH_FIELD_IMAGES_LABEL="Bilder im Text anzeigen"
 MODARH_FIELD_IMAGES_DESC="Hier kann eingestellt werden ob <strong>Bilder im Beitragstext</strong> angezeigt werden sollen."
 
 MODARH_FIELD_ITEM_TITLE_LABEL="Beitragstitel anzeigen"
-MODARH_FIELD_ITEM_TITLE_DESC="Anzeigen/Verbergen des Beitragstitel"
+MODARH_FIELD_ITEM_TITLE_DESC="Anzeigen oder Verbergen des Beitragstitel."
 
 MODARH_FIELD_LINK_TITLES_LABEL="Beitragstitel verlinken"
 MODARH_FIELD_LINK_TITLES_DESC="Den Beitragstitel als Link zum Beitrag anzeigen."
 
 MODARH_FIELD_TITLE_HEADING_LABEL="Überschriftgröße"
-MODARH_FIELD_TITLE_HEADING_DESC="Die Größe der Überschrift auswählen."
+MODARH_FIELD_TITLE_HEADING_DESC="Die Größe der Überschrift des Beitragstitel auswählen."
 
 MODARH_FIELD_READMORE_LABEL="Weiterlesen"
 MODARH_FIELD_READMORE_DESC="Wenn &bdquo;Anzeigen&ldquo; ausgewählt ist, wird der Weiterlesen-Link angezeigt. Aber nur wenn ein Haupttext im Beitrag vorhanden ist."
+
+MODARH_FIELD_FORCE_READMORE_LABEL="Weiterlesen erzwingen"
+MODARH_FIELD_FORCE_READMORE_DESC="Weiterlesen wird auch angezeigt, wenn der Beitrag keinen Weiterlesen-Text (Fulltext) hat."
 
 MODARH_FIELD_TRIGGER_EVENTS_LABEL="Content Events"
 MODARH_FIELD_TRIGGER_EVENTS_DESC="Joomla! Content Events in den Beiträgen auslösen. <strong>Wenn z.B. „Eigene Felder” (com_fields) benötigt werden muss diese Option eingeschaltet werden.</strong>"
 MODARH_FIELD_NOTE_CONTENT_EVENTS_DESC="Das auslösen der Content Events rendert auch andere Content-Plugins (z.B. Galerien etc.). Dies kann erwünschte und unerwünschte Effekte haben."
 
 MODARH_FIELD_SHOW_INFOBLOCK_LABEL="Beitragsinfo anzeigen"
-MODARH_FIELD_SHOW_INFOBLOCK_DESC=""
+MODARH_FIELD_SHOW_INFOBLOCK_DESC="Zeige die Infos wie Autor und Kategorie etc. an."
+
+MODARH_FIELD_NOTE_INFOBLOCK_LABEL="Beitragsinfo"
 
 MODARH_FIELD_SHOW_INFO_CREATEDATE_LABEL="Beitragsinfo Titel anzeigen"
 MODARH_FIELD_SHOW_INFO_CREATEDATE_DESC="Zeigt den Titel (Details) des Info-Blocks."
@@ -152,19 +163,20 @@ MODARH_FIELD_SHOW_HITS_DESC="Zeige wie oft die Beiträge aufgerufen wurden."
 
 
 
-
-
 ; AJAX und Filter
 COM_MODULES_MOD_INTRO_AJAX_FIELDSET_LABEL="AJAX"
 
 MODARH_FIELD_NOTE_AJAX_INTERFACE_LABEL="AJAX"
-MODARH_FIELD_NOTE_AJAX_INTERFACE_DESC="Ermöglicht das asynchrone laden von Beiträgen oder das asynchrone Blättern zwischen mehreren Seiten."
+MODARH_FIELD_NOTE_AJAX_INTERFACE_DESC="Ermöglicht das Laden weiterer Beiträge, blättern zwischen mehreren Seiten und Filtern im Frontend."
 
-MODARH_FIELD_AJAX_ENABLE_LABEL="AJAX Interface"
-MODARH_FIELD_AJAX_ENABLE_DESC="Aktiviere oder deaktiviere das AJAX Interface."
+MODARH_FIELD_AJAX_ENABLE_LABEL="AJAX Schnittstelle"
+MODARH_FIELD_AJAX_ENABLE_DESC="Aktiviere oder deaktiviere die AJAX-Schnittstelle."
+
+MODARH_FIELD_AJAX_USERSTATE_LABEL="Zustand speichern"
+MODARH_FIELD_AJAX_USERSTATE_DESC="Die letzte Ausgabe des Moduls wird gespeichert. Beim erneuten Besuch der Seite wird das Modul so ausgegeben wie es zuletzte angezeigt wurde (z.B.: ausgewählte Filter etc.)."
 
 MODARH_FIELD_AJAX_LOADMORE_TYPE_LABEL="Art der Steuerung"
-MODARH_FIELD_AJAX_LOADMORE_TYPE_DESC="Du kannst entscheiden zwischen einem Button, der das Laden einer festen Anzahl von Beiträgen auslöst, und diese an die Liste anhängt. Oder einer Paginierung, welche die angezeigten Beiträge ersetzt."
+MODARH_FIELD_AJAX_LOADMORE_TYPE_DESC="Ein Button, der das Laden einer festen Anzahl von Beiträgen auslöst, und diese an die Liste anhängt (oder ersetzt). Oder einer Paginierung, welche die angezeigten Beiträge ersetzt."
 MODARH_FIELD_AJAX_LOADMORE_TYPE_OPT_LOADMORE="Ein Button"
 MODARH_FIELD_AJAX_LOADMORE_TYPE_OPT_PAGINATION="Paginierung"
 
@@ -173,7 +185,7 @@ MODARH_FIELD_AJAX_PAGINATION_RANGE_DESC="Zeige diese Anzahl an Seiten in der Pag
 MODARH_RANGELINK_LABEL="..."
 
 MODARH_FIELD_AJAX_REPLACE_CONTENT_LABEL="Inhalt ersetzen"
-MODARH_FIELD_AJAX_REPLACE_CONTENT_DESC="Beim betätigen des „Mehr laden”-Link wird der Inhalt im Modul ersetzt und nicht am Ende angehängt."
+MODARH_FIELD_AJAX_REPLACE_CONTENT_DESC="Beim betätigen des „Mehr laden”-Link wird der Inhalt im Modul durch neu geladene Beiträge ersetzt."
 
 MODARH_FIELD_AJAX_PAGINATION_LABELS_LABEL="Beschriftung anzeigen"
 MODARH_FIELD_AJAX_PAGINATION_LABELS_DESC="Zeige die Beschriftungen der Buttons Vor, Zurück etc."
@@ -192,18 +204,27 @@ MODARH_FIELD_AJAX_SCROLL_OFFSET_QUERY_DESC="Ein gültiger CSS Selektor eines Ele
 MODARH_FIELD_AJAX_SCROLL_OFFSET_QUERY_HINT="z.B.: #site-header"
 
 MODARH_FIELD_AJAX_SCROLL_OFFSET_MANUAL_LABEL="Manueller Offset"
-MODARH_FIELD_AJAX_SCROLL_OFFSET_MANUAL_DESC="Ein Integer-Wert (Pixel) der beim Scrollen abgezogen wird."
+MODARH_FIELD_AJAX_SCROLL_OFFSET_MANUAL_DESC="Anzahl an Pixeln, die beim Scrollen abgezogen werden."
 
 ; Filter
 COM_MODULES_MOD_INTRO_AJAX_FILTERS_FIELDSET_LABEL="Filter"
 
-MODARH_FIELD_NOTE_AJAX_FILTERS_DISABLED_DESC="<strong style=\"color: #ff0000;\">Bitte zuerst das AJAX Interface im Reiter AJAX einschalten</strong>"
+MODARH_FIELD_NOTE_AJAX_FILTERS_DISABLED_DESC="<strong style=\"color: #ff0000;\">Bitte zuerst die AJAX-Schnittstelle im Reiter AJAX einschalten</strong>"
 
 MODARH_FIELD_NOTE_AJAX_FILTERS_LABEL="AJAX Filter"
 MODARH_FIELD_NOTE_AJAX_FILTERS_DESC="Ermöglicht das Filtern von Beiträgen im Frontend."
 
+MODARH_FIELD_AJAX_DYNAMICFILTER_OPTIONS_LABEL="Dynamische Filteroptionen"
+MODARH_FIELD_AJAX_DYNAMICFILTER_OPTIONS_DESC="Die Auswählbaren Filteroptionen passen sich entsprechend der gewählten Kategorie an. Es werden nur Optionen (Werte) angezeigt, die in den gewählten Kategorien enthalten sind."
+
+MODARH_FIELD_AJAX_FILTER_SHOWEMPTY_LABEL="Beiträge mit leeren Werten anzeigen"
+MODARH_FIELD_AJAX_FILTER_SHOWEMPTY_DESC="Mit dieser Option kann gesteuert werden, ob Beiträge die keinen Wert in einem Eigenen-Feld haben, nach dem gefiltert wird, angezeigt werden sollen. Standardmäßig werden Beiträge ohne einen Wert in einem Feld, nach dem gefiltert wird, nicht angezeigt." 
+
 MODARH_FIELD_AJAX_FILTERS_LABEL="Filter anzeigen"
 MODARH_FIELD_AJAX_FILTERS_DESC="Zeigt weitere Optionen zu möglichen Beitragsfiltern die das AJAX Interface benutzen."
+
+MODARH_FIELD_AJAX_RESET_FILTERS_LABEL="Filter zurücksetzen anzeigen"
+MODARH_FIELD_AJAX_RESET_FILTERS_DESC="Zeigt eine Schaltfläche zum zurücksetzen der Filter."
 
 MODARH_FIELD_AJAX_FILTER_LABEL="Filterkonfiguration"
 MODARH_FIELD_AJAX_FILTER_DESC="Wähle und konfiguriere die Filter"
@@ -217,16 +238,26 @@ MODARH_FIELD_FILTER_TYPE_OPT_CUSTOM="Eigene Felder"
 MODARH_FIELD_FILTER_CATEGORY_DEFAULT_LABEL="Vorgabe-Kategorie"
 MODARH_FIELD_FILTER_CATEGORY_DEFAULT_DESC="Die voreingestellte Kategorie für den Kategoriefilter."
 
+MODARH_FIELD_FILTER_FIELD_LABEL="Eigenes Feld"
+MODARH_FIELD_FILTER_FIELD_DESC="Wählen Sie das „Eigene Feld”."
+
 MODARH_FIELD_FILTER_LABEL_LABEL="Filterbeschriftung"
 MODARH_FIELD_FILTER_LABEL_DESC="Eine Optionale Beschriftung für den Filter im Frontend."
 
 MODARH_FIELD_FILTER_SORTING_LABEL="Optionen sortieren"
 MODARH_FIELD_FILTER_SORTING_DESC="Wie sollen die Optionen dieses Filters im Frontend sortiert werden?"
-MODARH_FIELD_FILTER_SORTING_OPT_ASC="Aufsteigend"
-MODARH_FIELD_FILTER_SORTING_OPT_DESC="Absteigend"
+MODARH_FIELD_FILTER_SORTING_OPT_ORDER="Reihenfolge (keine Sortierung)"
+MODARH_FIELD_FILTER_SORTING_OPT_ASC="Wert aufsteigend"
+MODARH_FIELD_FILTER_SORTING_OPT_DESC="Wert absteigend"
 
 MODARH_FIELD_FILTER_MULTIPLE_LABEL="Mehrfachauswahl"
 MODARH_FIELD_FILTER_MULTIPLE_DESC="Es können mehrere Optionen dieses Filters im Frontend ausgewählt und angewendet werden."
+
+MODARH_FIELD_FILTER_HIDE_OPTION_ALL_LABEL="Option „Alle” verbergen"
+MODARH_FIELD_FILTER_HIDE_OPTION_ALL_DESC="Verbirgt die Option „Alle” in den Filteroptionen."
+
+MODARH_FIELD_FILTER_OPTION_ALL_LABEL_LABEL="Option „Alle” Beschriftung"
+MODARH_FIELD_FILTER_OPTION_ALL_LABEL_DESC="Ändert die Beschriftung für die Option „Alle”."
 
 MODARH_FIELD_FILTER_SHOW_ITEMS_COUNT_LABEL="Anzahl Beiträge pro Option"
 MODARH_FIELD_FILTER_SHOW_ITEMS_COUNT_DESC="Zeigt die Anzahl der Beiträge, die auf eine Option dieses Filters zutreffen."
@@ -237,6 +268,27 @@ MODARH_FIELD_FILTER_TEMPLATE_DESC="Wähle das Template, das zum rendern dieses F
 MODARH_FRONT_BTN_SUBMIT_FILTERS="Filter anwenden"
 MODARH_FRONT_BTN_RESET_FILTERS="Filter zurücksetzen"
 
+
+; Range-Filter Diverses
+MODARH_FIELD_FILTER_RANGE_HANDLES_LABEL="Anzahl Griffe"
+MODARH_FIELD_FILTER_RANGE_HANDLES_DESC="Definiere die Anzahl der Griffe im Range-Slider."
+
+MODARH_FIELD_FILTER_RANGE_ROUND_NUMBERS_LABEL="Werte runden"
+MODARH_FIELD_FILTER_RANGE_ROUND_NUMBERS_DESC="Die Werte auf ganze Zahlen runden. Der niedrigste Wert (Startwert) wird abgerundet, der höchste Wert (Endwert) wird aufgerundet."
+
+; Range-Filter Nummernformatierung
+MODARH_FIELD_FILTER_RANGE_SHOW_FORMAT_LABEL="Zahlenformat einstellen"
+MODARH_FIELD_FILTER_RANGE_SHOW_FORMAT_DESC="Das Format der Zahlen einstellen."
+MODARH_FIELD_FILTER_RANGE_FORMAT_DECIMALS_LABEL="Dezimalstellen"
+MODARH_FIELD_FILTER_RANGE_FORMAT_DECIMALS_DESC="Definiert die Anzahl der Dezimalstellen."
+MODARH_FIELD_FILTER_RANGE_FORMAT_DECIMALMARK_LABEL="Dezimaltrennzeichen"
+MODARH_FIELD_FILTER_RANGE_FORMAT_DECIMALSMARK_DESC="Das Dezimaltrennzeichen ist im Dezimalsystem ein Zeichen, das die Grenze zwischen dem ganzzahligen Teil und dem gebrochenen Teil einer Zahl angibt."
+MODARH_FIELD_FILTER_RANGE_FORMAT_NUMBERGROUPING_LABEL="Zifferngruppierung"
+MODARH_FIELD_FILTER_RANGE_FORMAT_NUMBERGROUPING_DESC="Zifferngruppierung bezeichnet die Gruppierung der Ziffern in längeren Zahlen. In den meisten heutigen Sprachen werden größere Zahlen in einem Stellenwertsystem zur Basis Tausend gesprochen."
+MODARH_FIELD_FILTER_RANGE_FORMAT_NUMBERPREFIX_LABEL="Präfix"
+MODARH_FIELD_FILTER_RANGE_FORMAT_NUMBERPREFIX_DESC="Ein Symbol oder Text vor der Zahl."
+MODARH_FIELD_FILTER_RANGE_FORMAT_NUMBERSUFFIX_LABEL="Suffix"
+MODARH_FIELD_FILTER_RANGE_FORMAT_NUMBERSUFFIX_DESC="Ein Symbol oder Text nach der Zahl."
 
 ; Animationen
 MODARH_FIELD_NOTE_AJAX_POST_ANIMATIONS_LABEL="Animationen"
@@ -252,9 +304,9 @@ MODARH_FIELD_AJAX_POST_ANIMATION_CLASS_LABEL="Animationsklasse"
 MODARH_FIELD_AJAX_POST_ANIMATION_CLASS_DESC="Die Basisklasse für Animationen je nach Bibliothek."
 
 MODARH_FIELD_AJAX_POST_ANIMATION_NAME_LABEL="Animationsname"
-MODARH_FIELD_AJAX_POST_ANIMATION_NAME_DESC="Der Name der Einblendeanimation."
+MODARH_FIELD_AJAX_POST_ANIMATION_NAME_DESC="Name der Animation, oder eine durch Komma getrennte Liste mit Animationsnamen. Wird eine Liste eingegeben, werden die Animationen per Zufall ausgewählt."
 
-MODARH_FIELD_NOTE_AJAX_POST_ANIMATION_NAMES_DESC="Für weitere Informationen zu Animationsnamen siehe die <a href=\"https://daneden.github.io/animate.css/?utm_campaign=content-curation&utm_medium=website&utm_source=angular-js.in\" target=\"_blank\">Website von Animate.css</a>"
+MODARH_FIELD_NOTE_AJAX_POST_ANIMATION_NAMES_DESC="Für weitere Informationen zu Animationsnamen siehe die <a href=\"https://animate.style/\" target=\"_blank\">Website von Animate.css</a>"
 
 
 ; advanced
